Fixing nsbeta3+ bug 30534. Don't lie about what DOM features we support, be honest./paralellCheckout | & less r=nisheeth@netscape.com